@@ -32,9 +32,9 @@
             "rct2.scenery_small.tcl",
             "fidwell.scenery_small.tcl",
             "rct2.scenery_small.trf",
-            "$DAT:00000002|GWTRRF  ",
+            "fidwell.scenery_small.trf",
             "rct2.scenery_small.trf2",
-            "$DAT:09F55901|MG-RCT16",
+            "fidwell.scenery_small.trf2",
             "rct2.scenery_small.tel",
             "$DAT:00000002|GWTREL  ",
             "rct2.scenery_small.tap",
