@@ -1,0 +1,46 @@
+{
+    "id": "fidwell.scenery_small.trf",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "originalId": "00000002|GWTRRF  |577BBEF1",
+    "sourceGame": "custom",
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 27,
+        "removalPrice": 15,
+        "cursor": "CURSOR_TREE_DOWN",
+        "height": 116,
+        "isTree": true,
+        "shape": "4/4",
+        "hasPrimaryColour": true,
+        "hasSecondaryColour": true
+    },
+    "images": [
+      { "path": "./objects/temp/0.png", "x": -24, "y": -117 },
+      { "path": "./objects/temp/1.png", "x": -25, "y": -108 },
+      { "path": "./objects/temp/2.png", "x": -24, "y": -117 },
+      { "path": "./objects/temp/3.png", "x": -25, "y": -111 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Red Fir Tree",
+            "fr-FR": "Sapin rouge",
+            "de-DE": "Rotkiefer",
+            "es-ES": "Abeto rojo",
+            "it-IT": "Abete rosso",
+            "nl-NL": "Rode spar",
+            "sv-SE": "Röd tall",
+            "ko-KR": "붉은잣나무",
+            "zh-CN": "红杉木树",
+            "zh-TW": "紅杉木樹",
+            "pt-BR": "Abeto Vermelho",
+            "cs-CZ": "Jedle nádherná",
+            "ja-JP": "米松",
+            "pl-PL": "Daglezja",
+            "ru-RU": "Красная ель",
+            "eo-ZZ": "Ruĝa Abioarbo",
+            "ca-ES": "Avet roig",
+            "fi-FI": "Komeapihta"
+        }
+    }
+}
